--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,27 +1,26 @@
 [package]
-name = "sentry"
-version = "0.2.0"
 authors = ["Alexis Agahi <aagahi@prefetch.com>"]
+description = "Sentry (getsentry.com) client for rust ;)\n"
+documentation = "https://github.com/getsentry/sentry-rust"
+homepage = "https://github.com/getsentry/sentry-rust"
 license = "MIT/Apache-2.0"
+name = "sentry"
 readme = "Readme.md"
 repository = "https://github.com/getsentry/sentry-rust"
-homepage = "https://github.com/getsentry/sentry-rust"
-documentation = "https://github.com/getsentry/sentry-rust"
-description = """
-Sentry (getsentry.com) client for rust ;)
-"""
-
+version = "0.2.0"
 
 [dependencies]
 backtrace = "0.3"
-time = "0.1"
-url = "1"
-log = "0.3"
 error-chain = "0.11"
+failure = "0.1.1"
 futures = "0.1"
 hyper = "0.11"
 hyper-tls = "0.1"
-tokio-core = "0.1"
+log = "0.3"
+reqwest = "0.8.1"
 serde = "1"
 serde_derive = "1"
 serde_json = "1"
+time = "0.1"
+tokio-core = "0.1"
+url = "1"
