--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,16 +11,14 @@ version = "0.2.0"
 
 [dependencies]
 backtrace = "0.3"
-error-chain = "0.11"
 failure = "0.1.1"
-futures = "0.1"
 hyper = "0.11"
-hyper-tls = "0.1"
 log = "0.3"
 reqwest = "0.8.1"
 serde = "1"
 serde_derive = "1"
 serde_json = "1"
 time = "0.1"
-tokio-core = "0.1"
-url = "1"
+
+[dev-dependencies]
+dotenv = "0.10.1"
